fixed images not showing on live

--- a/src/style.scss
+++ b/src/style.scss
@@ -202,7 +202,7 @@ section:first-child {
 }
 
 #mesvg {
-  background-image: url("./me.svg");
+  background-image: url("../me.svg");
   
 }
 .info {
@@ -336,7 +336,7 @@ section:first-child {
   }
 #aboutme {
   background-color: #2d1650;
-  background-image: url("./djing.svg");
+  background-image: url("../djing.svg");
   background-position: left middle;
   background-size: contain;
   background-repeat: no-repeat;
